--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,16 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    App\Service\FolderDeletionService:
+        arguments:
+            $filesystem: '@filesystem'
+            $logger: '@logger'
+
+    App\Service\ScheduledTaskService:
+        arguments:
+            $filesystem: '@filesystem'
+            $logger: '@logger'
+            $executionTime: '2024-07-20 15:15:52'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
