--- a/config/services.yaml
+++ b/config/services.yaml
@@ -17,7 +17,7 @@ services:
         arguments:
             $filesystem: '@filesystem'
             $logger: '@logger'
-            $executionTime: '2024-07-18 17:50:00'
+            $executionTime: '@=new \DateTime("2024-07-18 18:22")'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
